--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "faker": "^3.1.0",
     "gulp": "*",
-    "gulp-connect": "*"
+    "gulp-connect": "*",
+    "webpack": "^1.13.2"
   }
 }
