--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   "devDependencies": {
     "faker": "^3.1.0",
     "gulp": "*",
-    "gulp-connect": "*",
-    "webpack": "^1.13.2"
+    "gulp-connect": "^5.0.0",
+    "gulp-util": "^3.0.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1",
+    "webpack-stream": "^3.2.0"
   }
 }
