--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
     "webpack-stream": "^3.2.0"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
