--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-connect": "^5.0.0",
     "gulp-util": "^3.0.7",
     "is_js": "^0.9.0",
+    "vanilla-masker": "^1.0.9",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1",
     "webpack-stream": "^3.2.0"
