--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   },
   "devDependencies": {
     "babel-core": "*",
-    "babel-loader": "*",
+    "babel-loader": "^6.2.5",
     "babel-plugin-transform-react-jsx": "^6.8.0",
+    "babel-preset-es2015": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^5.0.0",
